# dnspod-ddns

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_ZH.md  SECURITY.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: Dockerfile  PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml
.github/workflows/: audit.yml  auto-merge.yml  ci.yml  committed.yml  release.yml  rust-clippy.yml  spelling.yml
etc/systemd/system/: dnspod-ddns.service
src/: args.rs  client.rs  error.rs  lib.rs  main.rs  probe.rs
src/core/: constants.rs  dnspod.rs  mod.rs
src/dnspod/: client.rs  mod.rs
src/notify/: mod.rs  notify.rs
src/probe/: mod.rs
src/utils/: mod.rs
