[package]
name = "ddns"
version = "0.2.1"                                                            # A new beginning deserves a new version
authors = ["hardy <luohf@infinilabs.com>"]
edition = "2024"
description = "A modern, async DDNS tool for DNSPod with IPv4/IPv6 support."
license = "MIT"
repository = "https://github.com/luohoufu/dnspod-ddns"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

[lib]
name = "dnspod"
path = "src/lib.rs"

[[bin]]
name = "ddns"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'