[package]
name = "ddns"
version = "1.2.2"
authors = ["hardy <luohf@infinilabs.com>"]
edition = "2024"
rust-version = "1.87.0"                                                      # MSRV
description = "A modern, async DDNS tool for DNSPod with IPv4/IPv6 support."
license = "MIT"
repository = "https://github.com/luohoufu/dnspod-ddns"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

[lib]
name = "dnspod"
path = "src/lib.rs"

[[bin]]
name = "ddns"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[target.'cfg(not(proc_macro))']
rustflags = ["-Z", "sanitizer=address"]